@@ -164,6 +164,7 @@ fpinstall.test \
 gcj.test \
 gcj2.test \
 gcj3.test \
+gcj4.test \
 gnits.test \
 header.test \
 implicit.test \
