@@ -1,6 +1,14 @@
+2002-05-24  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	For PR automake/323:
+	* m4/depend.m4: Missing comma.
+	* tests/gcj4.test: New file.
+	* tests/Makefile.am (TESTS): Add gcj4.test.
+	Reported by David Pashley.
+
 2002-05-22  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
-	* tests/defs (confiugre.in): Don't double-quote $me.
+	* tests/defs (configure.in): Don't double-quote $me.
 	* tests/sinclude.test: Overwrite configure.in and use
 	`am__sinclude' instead of `sinclude' as package name.
 	Excercise `m4_sinclude' instead of `sinclude'.
